--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -133,7 +133,7 @@ li > label {
 }
 
 li >  input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 button.delete img {
@@ -148,13 +148,13 @@ button.delete img:hover {
 
 /* Completed */
 ul#completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type="text"] {
-  display: none
+  display: none;
 }
 
 ul li.editmode input[type="text"] {
