--- a/style.css
+++ b/style.css
@@ -47,11 +47,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button {
   outline: none;
 }
 
@@ -103,6 +105,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#new-task {
   width: 318px;
 }
@@ -132,7 +135,7 @@ li > label {
   width: 226px;
 }
 
-li >  input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 
