--- a/style.css
+++ b/style.css
@@ -5,28 +5,28 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.aaa {
+.guide {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.guide img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.guide .details {
   font-family: "fantasy", cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa { 
+  .guide { 
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -38,7 +38,7 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.task-wrapper {
   display: flex;
 }
 
