--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: "Lato", sans-serif;
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.guide img {
+.guide .img {
   width: 100%;
 }
 
@@ -47,17 +47,18 @@ ul {
   padding: 0px;
 }
 
-li, 
+.list-item, 
 h3 {
   list-style: none;
 }
 
-input,
-button {
+#new-task,
+.input-text,
+.button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +68,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
 h3,
-label[for="new-task"] {
+.label-new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +84,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+#new-task,
+.input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +98,23 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+#new-task:focus,
+.input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.label-new-task {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,51 +123,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.input-text {
   width: 226px;
 }
 
-button.delete img {
+.delete .img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete .img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.input-text {
   display: none;
 }
 
-ul li.edit-mode input[type="text"] {
+.edit-mode > .input-text  {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.edit-mode .label {
   display: none;
 }
